--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -13,7 +13,6 @@ editor_options:
 ---
 
 ```{r setup}
-knitr::opts_chunk$set(cache = TRUE)
 knitr::opts_knit$set(verbose = TRUE)
 ```
 
@@ -117,7 +116,7 @@ Mapped alignments
 Let's load data from genome alignments, using the copy distributed in the
 `BreakpointsData` package.
 
-```{r GRanges object}
+```{r GBreaks_object, cache=TRUE}
 # Local function to add extra annotation on long/short arms while loading data
 load_genomic_breaks_ <- function(file, genomeT, genomeQ, longShort=NULL) {
   file <- system.file(paste0("extdata/Oidioi_pairwise_v3/", file), package = "BreakpointsData")
@@ -152,7 +151,7 @@ gbs$Bar_Nor <- load_genomic_breaks_("Bar2_p4__OdB3.gff.gz",                 Bar2
 Coalescing alignments
 ---------------------
 
-```{r coalescing algorithm}
+```{r coalescing_algorithm, cache=TRUE, dependson="GBreaks_object"}
 coa <- sapply(gbs, coalesce_contigs) |> SimpleList()
 coa[ 1:5]  <- sapply(coa[ 1:5],  flagLongShort, longShort$Oki)
 coa[ 6:10] <- sapply(coa[ 6:10], flagLongShort, longShort$Osa)
@@ -164,7 +163,7 @@ Coalesce again
 
 See the Genomic Breaks vignette for justification.
 
-```{r re_coalesce}
+```{r re_coalesce, cache=TRUE, dependson="coalescing_algorithm"}
 coa2 <- sapply(coa, coalesce_contigs, minwidth = 500) |> SimpleList()
 coa2[ 1:5]  <- sapply(coa2[ 1:5],  flagLongShort, longShort$Oki)
 coa2[ 6:10] <- sapply(coa2[ 6:10], flagLongShort, longShort$Osa)
