--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -373,10 +373,11 @@ gg_freq_poly(DF) +
 
 ## Genome plots with genoPlotR
 
+Pairwise chromosome plots like the one below are built in the _parallel plots_
+vignette (`vignette("ParallelPlots", package = "OikScrambling")`).
+
 ```{r test_genoPlotR}
 library("genoPlotR")
-
-example("dna_seg")
 
 gr2dna_seg <- function (gr) {
   if (is.null(names(gr))) names(gr) <- as.character(gr)
@@ -402,11 +403,6 @@ gbQuery2dna_seq <- function (gb) {
   strand(gb$query) <- strand(gb)
   gr2dna_seg(gb$query)
 }
-
-# Plot whole chromosome 1
-ds <- gr2dna_seg(coa$Oki_Osa[seqnames(coa$Oki_Osa) == "chr1"])
-head(ds) ; tail(ds)
-plot_gene_map(list(ds))
 
 gb2comp <- function(gb) {
   ref <- gr2dna_seg(gb)
@@ -440,86 +436,6 @@ plotApairOfChrs <- function(gb, chr) {
 }
 
 plotApairOfChrs(coa$Oki_Bar, "chr1")
-plotApairOfChrs(coa$Oki_Osa, "chr1")
-plotApairOfChrs(coa$Osa_Oki, "Chr1")
-plotApairOfChrs(coa$Osa_Bar, "Chr1")
-plotApairOfChrs(coa2$Osa_Bar, "Chr1")
-```
-
-
-## Combine alignments to the same outgroup
-
-Since Okinawa is the outgroup, let's look for regions of it that are aligned
-on both the Osaka and the Norway genomes.
-
-```{r combine_GBs}
-x <- subsetByOverlaps(coa2$Oki_Osa, coa2$Oki_Bar)
-y <- subsetByOverlaps(coa2$Oki_Bar, coa2$Oki_Osa)
-findOverlapPairs(x,y)
-subsetByOverlaps(coa2$Oki_Osa, gaps(coa2$Oki_Bar))
-```
-
-## Extract ranges from the same target region in two GenomicBreaks objects
-
-```{r intersect_GBs}
-#roi <- GRanges("chr1:1222000-1240000")
-#roi <- GRanges("chr1:1023578-1032430")
-#roi <- GRanges("chr1:2668866-2692347")
-roi <- GRanges("chr1:6379932-6505436")
-#roi <- GRanges("chr1:6683567-6744168")
-roi <- GRanges("chr1:7711018-7734330")
-#roi <- GRanges("chr1:7711018-7734330") + 10000
-
-roi_Oki_O <- subsetByOverlaps(coa2$Oki_Osa, roi)
-roi_Oki_N <- subsetByOverlaps(coa2$Oki_Nor, roi)
-roi2 <- range(subsetByOverlaps(coa2$Oki_Osa, roi)$query)
-roi_O_N <- subsetByOverlaps(coa2$Osa_Nor, roi2)
-```
-
-### Plot a simple region.
-
-This region can be plotted because there is a one-to-one correspondence
-between alignments to Osaka and alignments to Norway.
-
-```{r plot_intersect_GBs}
-roiNameO <- seqlevelsInUse(roi_Oki_O$query)[1]
-roiNameOki <- seqlevelsInUse(roi)[1]
-roiNameN <- seqlevelsInUse(roi_Oki_N$query)[1]
-
-dsList <-   list(
-    roi_Oki_O[seqnames(roi_Oki_O$query) == roiNameO] |> gbQuery2dna_seq(),
-    roi_Oki_O[seqnames(roi_Oki_O$query) == roiNameO] |> gbRef2dna_seq(),
-    roi_Oki_N[seqnames(roi_Oki_N$query) == roiNameN] |> gbRef2dna_seq(),
-    roi_Oki_N[seqnames(roi_Oki_N$query) == roiNameN] |> gbQuery2dna_seq()
-    )
-names(dsList) <- c(roiNameO, roiNameOki, roiNameOki, roiNameN)
-
-tmpgb <- roi_Oki_O
-tmpgb$query <- granges(roi_Oki_N)
-
-compList <- list(
-    roi_Oki_O[seqnames(roi_Oki_O$query) == roiNameO] |> swap() |> gb2comp(),
-    tmpgb |> gb2comp(),
-    roi_Oki_N[seqnames(roi_Oki_N$query) == roiNameN] |> gb2comp()
-  )
-
-plot_gene_map(dsList, compList, dna_seg_scale=TRUE)
-```
-
-```{r plot_intersect_GBs_with_tree}
-dsList <-   list(
-    roi_Oki_N[seqnames(roi_Oki_N$query) == roiNameN] |> gbRef2dna_seq(),
-    roi_Oki_O[seqnames(roi_Oki_O$query) == roiNameO] |> gbQuery2dna_seq(),
-    roi_Oki_N[seqnames(roi_Oki_N$query) == roiNameN] |> gbQuery2dna_seq()
-    )
-names(dsList) <- c(roiNameOki, roiNameO, roiNameN)
-
-compList <- list(
-    roi_Oki_O[seqnames(roi_Oki_O$query) == roiNameO] |> gb2comp(),
-    roi_O_N[seqnames(roi_O_N$query) == roiNameN] |> gb2comp()
-  )
-
-plot_gene_map(dsList, compList, dna_seg_scale=TRUE, tree=ade4::newick2phylog(addRoot(treeNode(roiNameOki, treeNode(roiNameO, roiNameN)))))
 ```
 
 ## Trivial inversions
